syntax = "proto3";

package rpc;

option go_package = "./;rpc";

message ReqMsg {
    int32   version = 1;
    uint64  id = 2;
    string  method = 3;
    string  service = 4;
    bytes   body = 5;
}

message RespMsg {
    uint64  id = 1;
    bytes   body = 2;
}

message RespBody {
    int32   code = 1;
    string  msg = 2;
    bytes   data = 3;
}

message file_upload_info {
  string  file_id = 1;
  string  file_hash = 2;
  string  backups = 3;
  int32   block_total = 4;
  int32   block_size = 5;
  int32   block_index = 6;
  bytes   data = 7;
}

message file_download_info {
  string  file_id = 1;
  int32   block_total = 2;
  int32   block_size = 3;
  int32   block_index = 4;
  bytes   data = 5;
}

message file_download_req{
  string  file_id = 1;
  string  walletAddress = 2;
  int32   block_index = 3;
}

message space_file_req{
  string acc = 1;
  string fileid = 2;
  uint32 size_mb = 3;
  uint32 blockIndex = 4;
  bytes  sign = 5;
}

message space_tag_req{
  string acc = 1;
  string fileid = 2;
  bytes  sign = 3;
}

message file_back_req{
  string acc = 1;
  string fileid = 2;
  string filehash = 3;
  bytes  sign = 4;
}

message PutFileToBucket {
  uint32 blockTotal = 1;
  uint32 blockIndex = 2;
  uint32 blockSize = 3;
  string fileId = 4;
  string fileHash = 5;
  bytes  blockData = 6;
}

message PutTagToBucket {
  string   fileId = 1;
  bytes    name = 2;
	int64    n = 3;
	repeated bytes u = 4;
  bytes    signature = 5;
  repeated bytes sigmas = 6;
}

message ReadTag_req {
  string acc = 1;
  string fileId = 2;
}